--- a/restaurant-2/src/index.html
+++ b/restaurant-2/src/index.html
@@ -9,6 +9,9 @@
 </head>
 
   <body>
-    <h1>hello</h1>
+    //= html/header.html
+    <main>
+        //= html/right-food.html
+    </main>
   </body>
 </html>
