--- a/restaurant-2/src/html/header.html
+++ b/restaurant-2/src/html/header.html
@@ -1,3 +1,33 @@
+
 <header class="header-section">
-    
+    <div class="container">
+        <section class="header-logo-nav">
+        <div class="logo">
+            <img class="logo-img" src="../images/logo.png" alt="logo">
+        </div>
+        <nav class="header-nav">
+            <a href="#" class="nav__links">home</a>
+            <a href="#" class="nav__links">about</a>
+            <a href="#" class="nav__links">ingredients</a>
+            <a href="#" class="nav__links">menu</a>
+            <a href="#" class="nav__links">reviews</a>
+            <a href="#" class="nav__links">reservations</a>
+            <a href="#" class="nav__links">
+                <svg class="header-svg">
+                    <use href="images/svg-icons/social-networks.svg#twitter"> </use>
+                </svg>
+            </a>
+            <a href="#" class="nav__links">
+                    <svg class="header-svg">
+                            <use href="images/svg-icons/social-networks.svg#youtube"> </use>
+                        </svg>
+            </a>
+            <a href="#" class="nav__links">
+                    <svg class="header-svg">
+                            <use href="images/svg-icons/social-networks.svg#facebook"> </use>
+                        </svg>
+            </a>
+        </nav>
+    </section>
+    </div>
 </header>
