--- a/restaurant-2/src/html/header.html
+++ b/restaurant-2/src/html/header.html
@@ -2,9 +2,9 @@
 <header class="header-section">
     <div class="container">
         <section class="header-logo-nav">
-        <div class="logo">
+        <a href="#" class="logo">
             <img class="logo-img" src="../images/logo.png" alt="logo">
-        </div>
+        </a>
         <nav class="header-nav">
             <a href="#" class="nav__links">home</a>
             <a href="#" class="nav__links">about</a>
