--- a/restaurant-2/src/html/header.html
+++ b/restaurant-2/src/html/header.html
@@ -1,4 +1,3 @@
-
 <header class="header-section">
     <div class="container">
         <section class="header-logo-nav">
@@ -29,5 +28,13 @@
             </a>
         </nav>
     </section>
+    <div class="header-txt-btn">
+    <h1 class="header-title">the right ingredient for the right food</h1>
+    <div class="header-buttons">
+        <button class="header-btn">Book a table</button>
+        <button class="header-btn">See the menu</button>
+    </div>
+
+</div>
     </div>
 </header>
