updated and added section 02 - right food

--- a/restaurant-2/src/html/right-food.html
+++ b/restaurant-2/src/html/right-food.html
@@ -1,3 +1,14 @@
 <section class="right-food-section">
-    
+    <container class="container right-food-items">
+    <div class="rigth-food-txt-section">
+        <h2 class="rigth-food-title">just the right food</h2>
+        <p class="right-food-txt">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!</p>
+        <div class="right-food-chef">
+            <img src="../images/cook.png" alt="chef">
+        </div>
+    </div>
+    <div class="right-food-image">
+        <img src="../images/dish.png" alt="food-plate">
+    </div>
+</container>
 </section>
