--- a/restaurant-2/src/html/footer.html
+++ b/restaurant-2/src/html/footer.html
@@ -1,3 +1,57 @@
 <section class="footer-section">
-<h2>BYE!@@@</h2>
+    <div class="footer-content container">
+  <div class="descr descr__abt-us">
+    <h2 class="descr__ab-us__title">About us</h2>
+    <p class="descr__ab-us__txt">Lambda's new and expanded Chelsea location represents a truly authentic <b>Greek</b>
+      patisserie,
+      featuring breakfasts of fresh croissants and steaming bowls of café.
+      Lamda the best restaurant in town</p>
+  </div>
+  <div class=" descr descr__hours">
+    <h2 class="descr__hours__title">Opening Hours</h2>
+    <p class="descr__hours__txt"><b>Mon-Thu:</b> 7:00am-8:00pm<br>
+    <b>Fri-Sun:</b> 7:00am-10:00pm<br></p>
+    <div class="icons-items payments-methods">
+      <svg class="icon americanexpress">
+        <use href="../images/svg-icons/payment-methods.svg#americanexpress"></use>
+      </svg>
+      <svg class="icon mastercars">
+        <use href="../images/svg-icons/payment-methods.svg#mastercard"></use>
+      </svg>
+      <svg class="icon visa">
+        <use href="../images/svg-icons/payment-methods.svg#visa"></use>
+      </svg>
+      <svg class="icon paypal">
+        <use href="../images/svg-icons/payment-methods.svg#paypal"></use>
+      </svg>
+    </div>
+  </div>
+  <div class="descr descr__location">
+    <h2 class="descr__location__title">Our Location</h2>
+    <p class="descr__location__txt"><b>19th Paradise Street Sitia<br>
+      128 Meserole Avenue</b></p>
+    <div class=".icons-items descr__location__link">
+      <a href="#" class="fb link1">
+        <svg class="fb icon link">
+          <use href="../images/svg-icons/social-networks.svg#facebook"></use>
+        </svg>
+      </a>
+      <a href="#" class="youtube link1">
+        <svg class="youtube icon link">
+          <use href="../images/svg-icons/social-networks.svg#youtube"></use>
+        </svg>
+      </a>
+      <a href="#" class="instagram link1">
+      <svg class="instagram icon link">
+          <use href ="../images/svg-icons/social-networks.svg#instagram"></use>
+      </svg>
+      </a>
+      <a href="#" class="twitter link1">
+          <svg class="twitter icon link">
+              <use href="../images/svg-icons/social-networks.svg#twitter"></use>
+          </svg>
+      </a>
+    </div>
+  </div>
+</div>
 </section>
