section fine ingredients is done

--- a/restaurant-2/src/index.html
+++ b/restaurant-2/src/index.html
@@ -11,6 +11,7 @@
     //= html/header.html
     <main>
         //= html/right-food.html
+        //= html/fine-ingredients.html
     </main>
     //= html/footer.html
   </body>
