updates with menu. special items have to be reviewed and done. Menu items position to be changed

--- a/restaurant-2/src/html/fine-ingredients.html
+++ b/restaurant-2/src/html/fine-ingredients.html
@@ -1,5 +1,5 @@
 <section class="fine-ingredients-section">
-<container class="container f-i-container">
+<div class="container f-i-container">
 <div class="fine-ingredients">
     <div class="txt-fine-ing">
     <h2 class="fine-ingredients-title">Fine ingredients</h2>
@@ -12,5 +12,5 @@
 </div>
 </div>
 
-</container>
+</div>
 </section>
