--- a/restaurant-2/src/index.html
+++ b/restaurant-2/src/index.html
@@ -12,6 +12,7 @@
   <main>
     //= html/right-food.html
     //= html/fine-ingredients.html
+    //= html/menu.html
     //= html/guest-reviews.html
     //= html/just-the-rigth-food.html
   </main>
