menu items are ready

--- a/restaurant-2/src/html/menu.html
+++ b/restaurant-2/src/html/menu.html
@@ -1,6 +1,6 @@
 <section class="menu-section">
   <div class="menu_items_main container">
-    <div class="menu_items_second">
+    <div class="menu_items_first">
       <div class="menu_items_positions">
         <p class="menu_items-title">Appetisers</p>
         <div class="menu-item-self">
@@ -26,6 +26,31 @@
         </div>
       </div>
       <div class="menu_items_positions">
+        <p class="menu_items-title">Salads</p>
+        <div class="menu-item-self">
+          <p class="menu-position">Olive Special</p>
+          <p class="menu-price">$5.99</p>
+          <p class="menu-description">
+            Refreshing traditional cucumber and garlic yoghurt dip.
+          </p>
+        </div>
+        <div class="menu-item-self special-offer">
+          <p class="menu-position">Greek Salad</p>
+          <p class="menu-price">$5.50</p>
+          <p class="menu-description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+        </div>
+        <div class="menu-item-self">
+          <p class="menu-position">Gusto Salad</p>
+          <p class="menu-price">$5.25</p>
+          <p class="menu-description">
+            Refreshing traditional cucumber and garlic yoghurt dip.
+          </p>
+        </div>
+      </div>
+    </div>
+
+<div class="menu_items_second">
+      <div class="menu_items_positions">
         <p class="menu_items-title">Starters</p>
         <div class="menu-item-self">
           <p class="menu-position">Haloumi</p>
@@ -41,28 +66,6 @@
         </div>
       </div>
       <div class="menu_items_positions">
-        <p class="menu_items-title">Salads</p>
-        <div class="menu-item-self">
-          <p class="menu-position">Olive Special</p>
-          <p class="menu-price">$5.99</p>
-          <p class="menu-description">
-            Refreshing traditional cucumber and garlic yoghurt dip.
-          </p>
-        </div>
-        <div class="menu-item-self">
-          <p class="menu-position">Greek Salad</p>
-          <p class="menu-price">$5.50</p>
-          <p class="menu-description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
-        </div>
-        <div class="menu-item-self">
-          <p class="menu-position">Gusto Salad</p>
-          <p class="menu-price">$5.25</p>
-          <p class="menu-description">
-            Refreshing traditional cucumber and garlic yoghurt dip.
-          </p>
-        </div>
-      </div>
-      <div class="menu_items_positions">
         <p class="menu_items-title">Main Dishes</p>
         <div class="menu-item-self">
           <p class="menu-position">Cornish Mackerel</p>
@@ -71,7 +74,7 @@
             Refreshing traditional cucumber and garlic yoghurt dip.
           </p>
         </div>
-        <div class="menu-item-self">
+        <div class="menu-item-self special-offer">
           <p class="menu-position">Roast Lamb</p>
           <p class="menu-price">$5.50</p>
           <p class="menu-description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
@@ -90,5 +93,6 @@
               </div>
       </div>
     </div>
+  </div>
   </div>
 </section>
