mondays changes in header

--- a/restaurant-2/src/html/header.html
+++ b/restaurant-2/src/html/header.html
@@ -1,9 +1,12 @@
 <header class="header-section">
-    <div class="container">
+    <div class="container media-nav-header">
         <section class="header-logo-nav">
+                <div class="header-media-nav">
+                        <svg class="svg-media-header"> <use href="images/svg-icons/svg-menu.svg#menu1"></use></svg>
+                    </div>
         <a href="#" class="logo">
             <img class="logo-img" src="../images/logo.png" alt="logo">
-        </a>
+        </a>       
         <nav class="header-nav">
             <a href="#" class="nav__links">home</a>
             <a href="#" class="nav__links">about</a>
@@ -11,17 +14,17 @@
             <a href="#" class="nav__links">menu</a>
             <a href="#" class="nav__links">reviews</a>
             <a href="#" class="nav__links">reservations</a>
-            <a href="#" class="nav__links">
+            <a href="#" class="nav__links svg-h">
                 <svg class="header-svg">
                     <use href="images/svg-icons/social-networks.svg#twitter"> </use>
                 </svg>
             </a>
-            <a href="#" class="nav__links">
+            <a href="#" class="nav__links svg-h">
                     <svg class="header-svg">
                             <use href="images/svg-icons/social-networks.svg#youtube"> </use>
                         </svg>
             </a>
-            <a href="#" class="nav__links">
+            <a href="#" class="nav__links svg-h">
                     <svg class="header-svg">
                             <use href="images/svg-icons/social-networks.svg#facebook"> </use>
                         </svg>
@@ -37,4 +40,12 @@
 
 </div>
     </div>
+
+    <!-- <div class="media__nav">
+            <a href="#" class="header-media-nav">
+                    <svg>
+                        <use class="menu__svg" href="images/svg-icons/menu-items.svg#menu01"></use>
+                    </svg>
+                </a>
+    </div> -->
 </header>
