--- a/restaurant-2/src/html/header.html
+++ b/restaurant-2/src/html/header.html
@@ -5,7 +5,7 @@
                         <svg class="svg-media-header"> <use href="images/svg-icons/svg-menu.svg#menu1"></use></svg>
                     </div>
         <a href="#" class="logo">
-            <img class="logo-img" src="../images/logo.png" alt="logo">
+            <img class="logo-img" src="../images/logo-upscale.png" alt="logo">
         </a>       
         <nav class="header-nav">
             <a href="#" class="nav__links">home</a>
