--- a/restaurant-2/src/html/just-the-rigth-food.html
+++ b/restaurant-2/src/html/just-the-rigth-food.html
@@ -35,9 +35,12 @@
               <p class="form_txt_p">Party number</p>
               <select class="select" name="party_number">
                 <option value="1">party number</option>
-                <option value="2">0</option>
-                <option value="3">-1</option>
-                <option value="4">where is my dragons?</option>
+                <option value="2">small (up to 4 people)</option>
+                <option value="3">medium (up to 8 people)</option>
+                <option value="4">large (up to 12 people)</option>
+                <option value="5">extra large (up to 16 people)</option>
+                <option value="6">party time (up to 50 people)</option>
+                <option value="7">party time XXL (entire place)</option>
               </select>
             </div>
           </div>
