--- a/restaurant-2/src/html/guest-reviews.html
+++ b/restaurant-2/src/html/guest-reviews.html
@@ -1,6 +1,6 @@
 <section class="guest-reviews-section">
   
-    <div class="guest-rew-words container">
+    <div class="guest-rew-words ">
       <h2 class="guest-rew_title">Guest Reviews</h2>
       <p class="guest-rew_p">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our
         customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and
