--- a/restaurant-2/src/html/fine-ingredients.html
+++ b/restaurant-2/src/html/fine-ingredients.html
@@ -6,9 +6,9 @@
     <p class="fine-ingredients-txt">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!
 </p></div>
 <div class="fine-ingredients-img">
-    <img class="f-i-img" src="../images/wheat.png" alt="">
-    <img class="f-i-img" src="../images/spices.png" alt="">
-    <img class="f-i-img" src="../images/bread.png" alt="">
+    <img class="f-i-img" src="images/wheat.png" alt="">
+    <img class="f-i-img" src="images/spices.png" alt="">
+    <img class="f-i-img" src="images/bread.png" alt="">
 </div>
 </div>
 
