--- a/restaurant-2/src/html/footer.html
+++ b/restaurant-2/src/html/footer.html
@@ -13,16 +13,16 @@
     <b>Fri-Sun:</b> 7:00am-10:00pm<br></p>
     <div class="icons-items payments-methods">
       <svg class="icon americanexpress">
-        <use href="../images/svg-icons/payment-methods.svg#americanexpress"></use>
+        <use href="images/svg-icons/payment-methods.svg#americanexpress"></use>
       </svg>
       <svg class="icon mastercars">
-        <use href="../images/svg-icons/payment-methods.svg#mastercard"></use>
+        <use href="images/svg-icons/payment-methods.svg#mastercard"></use>
       </svg>
       <svg class="icon visa">
-        <use href="../images/svg-icons/payment-methods.svg#visa"></use>
+        <use href="images/svg-icons/payment-methods.svg#visa"></use>
       </svg>
       <svg class="icon paypal">
-        <use href="../images/svg-icons/payment-methods.svg#paypal"></use>
+        <use href="images/svg-icons/payment-methods.svg#paypal"></use>
       </svg>
     </div>
   </div>
@@ -33,22 +33,22 @@
     <div class=".icons-items descr__location__link">
       <a href="#" class="fb link1">
         <svg class="fb icon link">
-          <use href="../images/svg-icons/social-networks.svg#facebook"></use>
+          <use href="images/svg-icons/social-networks.svg#facebook"></use>
         </svg>
       </a>
       <a href="#" class="youtube link1">
         <svg class="youtube icon link">
-          <use href="../images/svg-icons/social-networks.svg#youtube"></use>
+          <use href="images/svg-icons/social-networks.svg#youtube"></use>
         </svg>
       </a>
       <a href="#" class="instagram link1">
       <svg class="instagram icon link">
-          <use href ="../images/svg-icons/social-networks.svg#instagram"></use>
+          <use href ="images/svg-icons/social-networks.svg#instagram"></use>
       </svg>
       </a>
       <a href="#" class="twitter link1">
           <svg class="twitter icon link">
-              <use href="../images/svg-icons/social-networks.svg#twitter"></use>
+              <use href="images/svg-icons/social-networks.svg#twitter"></use>
           </svg>
       </a>
     </div>
