--- a/restaurant-2/src/html/just-the-rigth-food.html
+++ b/restaurant-2/src/html/just-the-rigth-food.html
@@ -2,10 +2,10 @@
   <div class="just-tr-food container">
     <div class="just-tr-food_photos">
       <div class="just-tr-food_photo">
-        <img src="../images/the-right-food.png" alt="meat" width="270" height="507">
+        <img src="images/the-right-food.png" alt="meat" width="270" height="507">
       </div>
       <div class="just-tr-food_photo">
-        <img src="../images/the-right-food02.png" alt="vegetables" width="270" height="507">
+        <img src="images/the-right-food02.png" alt="vegetables" width="270" height="507">
       </div>
     </div>
     <div class="just-tr-food_txt">
