fixed buttons and labels

--- a/restaurant-2/src/html/just-the-rigth-food.html
+++ b/restaurant-2/src/html/just-the-rigth-food.html
@@ -14,25 +14,25 @@
         customers coming back for more. Perfect materials and freshly baked food.</p>
       <p class="just-tr-food_txt_p">Delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist! Stop in
         today and check us out! Perfect materials and freshly baked food.</p>
-      <div class="form">
+      
         <form class="form_food" method="get" action="#">
           <div class="inputs_item">
             <div class="inputs form_name">
-              <p class="form_txt_p">Name</p>
+              <label class="form_txt_p">Name</label>
               <input class="form-txt" type="text" name="name" placeholder="your name*" required />
             </div>
             <div class="inputs form_mail">
-              <p class="form_txt_p">Email</p>
+              <label class="form_txt_p">Email</label>
               <input class="form-txt" type="email" name="email" placeholder="your email*" required />
             </div>
             <div class="inputs form_date">
-              <p class="form_txt_p">Date</p>
+              <label class="form_txt_p">Date</label>
               <label class="label-for-data">
                 <input class="form-txt data" type="text" name="data-text" placeholder="date*" required />
               </label>
             </div>
             <div class="inputs form_party-number">
-              <p class="form_txt_p">Party number</p>
+              <label class="form_txt_p">Party number</label>
               <select class="select" name="party_number">
                 <option class="option" value="1">party number</option>
                 <option class="option" value="2">small (up to 4 people)</option>
@@ -47,6 +47,6 @@
           <button class="form-button" type="submit">Book now!</button>
         </form>
       </div>
-    </div>
+   
   </div>
 </section>
